[package]
edition = "2021"
name = "hedgewars-server"
version = "0.9.0"
authors = [ "Andrey Korotaev <a.korotaev@hedgewars.org>" ]

[features]
official-server = []
default = []

[dependencies]
base64 = "0.13"
bitflags = "1.3"
bytes = "1.1"
chrono = "0.4"
env_logger = "0.8"
getopts = "0.2"
log = "0.4"
nom = "7.1"
rand = "0.8"
serde = "1.0"
serde_yaml = "0.8"
serde_derive = "1.0"
slab = "0.4"
tokio = { version = "1.16", features = ["full"]}

hedgewars-network-protocol = { path = "../hedgewars-network-protocol" }

[dev-dependencies]
proptest = "1.0"
