[package]
name = "hwphysics"
version = "0.1.0"
authors = ["Hedgewars Project"]
edition = "2018"

[dependencies]
fpnum = { path = "../fpnum" }
integral-geometry = { path = "../integral-geometry" }
land2d = { path = "../land2d" }

[dev-dependencies]
criterion = "0.4.0"

[[bench]]
name = "ecs_bench"
harness = false