[package]
name = "lib-hedgewars-engine"
version = "0.1.0"
authors = ["Andrey Korotaev <a.korotaev@hedgewars.org>"]
edition = "2018"

[dependencies]
gl = "0.11"
netbuf = "0.4"

fpnum = { path = "../fpnum" }
land2d = { path = "../land2d" }
lfprng = { path = "../lfprng" }
integral-geometry = { path = "../integral-geometry" }
landgen = { path = "../landgen" }
hedgewars-engine-messages = { path = "../hedgewars-engine-messages" }
hwphysics = { path = "../hwphysics" }
mapgen = { path = "../mapgen" }
vec2d = { path = "../vec2d" }

[dev-dependencies]
proptest = "0.9.2"

[lib]
name = "hedgewars_engine"
crate-type = ["dylib"]
