[package]
name = "lib-hedgewars-engine"
version = "0.1.0"
authors = ["Andrey Korotaev <a.korotaev@hedgewars.org>"]
edition = "2021"
build = "build.rs"

[dependencies]
gl = "0.14"
netbuf = "0.4"
itertools = "0.14"
png = "0.17"

fpnum = { path = "../fpnum" }
land2d = { path = "../land2d" }
lfprng = { path = "../lfprng" }
integral-geometry = { path = "../integral-geometry" }
landgen = { path = "../landgen" }
hedgewars-engine-messages = { path = "../hedgewars-engine-messages" }
hwphysics = { path = "../hwphysics" }
mapgen = { path = "../mapgen" }
vec2d = { path = "../vec2d" }
log = "0.4.25"

[dev-dependencies]
proptest = "0.9.2"

[build-dependencies]
cbindgen = "0.28"

[lib]
name = "hedgewars_engine"
crate-type = ["dylib"]
