[package]
name = "lib-hwengine-future"
version = "0.1.0"
edition = "2021"
authors = ["Andrey Korotaev <a.korotaev@hedgewars.org>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
land2d = { path = "../land2d" }
integral-geometry = { path = "../integral-geometry" }
mapgen = { path = "../mapgen" }
landgen = { path = "../landgen" }
lfprng = { path = "../lfprng" }

[lib]
name = "hwengine_future"
crate-type = ["dylib"]
