[package]
name = "mapgen"
version = "0.1.0"
authors = ["Hedgewars Project"]
edition = "2018"

[dependencies]
land2d = { path = "../land2d" }
landgen = { path = "../landgen" }
lfprng = { path = "../lfprng" }
integral-geometry = { path = "../integral-geometry" }

rand = "0.5"
serde = "1.0"
serde_yaml = "0.8"
serde_derive = "1.0"